--- a/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
@@ -24,15 +24,13 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
                 <a asp-page="/Index" class="navbar-brand">Pizzeria</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse navbar-left">
                 <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
+                    <li><a asp-page="/Index">Navi Pizza</a></li>
+                    <li><a asp-page="/About">Ordenar</a></li>
                 </ul>
             </div>
         </div>
