--- a/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
@@ -60,9 +60,12 @@
                         
                         <div class="tab-content">
                             <div class="tab-pane active" id="tab_default_1">
+                                
+                                
                                 <div class="ingredientes">
                                     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                                         <div class="panel panel-default">
+                                            
                                             <div class="panel-heading" role="tab" id="headingOne">
                                                 <h4 class="panel-title">
                                                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -71,6 +74,7 @@
                                                     </a>
                                                 </h4>
                                             </div>
+                                            
                                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                                 <div class="panel-body">
                                                     <div class="tamano-pizza">
@@ -93,26 +97,32 @@
                                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                                                 <div class="panel-body">
                                                     <input type="checkbox" id="jamon" name="jamon" value="500">
-                                                    <label for="vehicle1"> Jamón CRC500.00</label><br>
+                                                    <label for="jamon"> Jamón CRC500.00</label><br>
                                                     <input type="checkbox" id="hongos" name="hongos" value="500">
-                                                    <label for="vehicle2"> Hongos CRC500.00</label><br>
+                                                    <label for="hongos"> Hongos CRC500.00</label><br>
                                                     <input type="checkbox" id="queso-extra" name="queso-extra" value="1000">
-                                                    <label for="vehicle3"> Queso extra CRC1000.00</label><br><br>
+                                                    <label for="queso-extra"> Queso extra CRC1000.00</label><br><br>
                                                 </div>
                                             </div>
                                         </div>
                                     </div><!-- panel-group -->
+
+
                                 </div><!-- container -->
+
+                                <div class="row">
+                                    <button asp-page-handler="Orden">Proceder al chequeo</button>
+                                </div>
 
                             </div>
                             <div class="tab-pane" id="tab_default_2">
                                 <p>
-                                    Hola2
+                                    Recibo
                                 </p>
                             </div>
 
                             <div class="tab-pane" id="tab_default_3">
-                                Hola3
+                                Dirección
                             </div>
                         </div>
                     </div>
