--- a/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
@@ -17,24 +17,18 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-page="/Index" class="navbar-brand">Pizzeria</a>
-            </div>
-            <div class="navbar-collapse collapse navbar-left">
-                <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Navi Pizza</a></li>
-                    <li><a asp-page="/About">Ordenar</a></li>
-                </ul>
+                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                <a class="navbar-brand" href="#">Navishi's Pizza.</a>
             </div>
         </div>
     </nav>
+    <!-- some content to allow scrolling :)-->
+    <div class="hero">
+        <div class="overlay"></div>
+    </div>
 
     <partial name="_CookieConsentPartial" />
 
