Cambios de estilo Se cambia de nuevo el estilo de la página. Mayoritariamente el navbar

--- a/Pizzeria/Pizzeria/Pages/Index.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Index.cshtml
@@ -4,4 +4,45 @@
     ViewData["Title"] = "Index";
 }
 
+<html>
+<head>
+    <meta charset="utf-8" />
+
+    <script src="https://kit.fontawesome.com/8dbd1c7c50.js" crossorigin="anonymous"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+    <style>
+        form {
+            width: 100%;
+            margin:auto;
+            padding: 20px;
+            border-radius: 6px;
+            background-color: wheat;
+            
+        }
+
+            form h1 {
+                align-content: center;
+                color: white;
+            }
+    </style>
+
+</head>
+
+<body>
+    <form method="post">
+        <div class="container">
+            <h1>Bienvenido a Navishi's Pizza</h1>
+            <button class="btn btn-outline-primary">Ordenar</button>
+        </div>
+    </form>
+
+</body>
+</html>
+
+
+
 
