--- a/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
@@ -10,108 +10,114 @@
 
     <script src="https://kit.fontawesome.com/8dbd1c7c50.js" crossorigin="anonymous"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
     <link href="~/css/collapse.css" rel="stylesheet">
 
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <form method="post">
-        <div class="container">
-            <div class="col-lg-12">
-                <div data-spy="scroll" class="tabbable-panel">
-                    <div class="tabbable-line">
-                        <ul class="nav nav-tabs ">
-                            <li class="active">
-                                <a href="#tab_default_1" data-toggle="tab">
-                                    Ordenar
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#tab_default_2" data-toggle="tab">
-                                    Recibo
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#tab_default_3" data-toggle="tab">
-                                    Dirección
-                                </a>
-                            </li>
-                        </ul>
+            <div class="container center textbox">
+                <div class="col-lg-12">
+                    <div data-spy="scroll" class="tabbable-panel">
+                        <div class="tabbable-line">
+                            <ul class="nav nav-tabs ">
+                                <li class="active">
+                                    <a href="#tab_default_1" data-toggle="tab">
+                                        Ordenar
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab_default_2" data-toggle="tab">
+                                        Recibo
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#tab_default_3" data-toggle="tab">
+                                        Dirección
+                                    </a>
+                                </li>
+                            </ul>
 
-                        <div class="tab-content">
-                            <div class="tab-pane active" id="tab_default_1">
-                                <div class="ingredientes">
-                                    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                                        <div class="panel panel-default">
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="tab_default_1">
+                                    <div class="ingredientes">
+                                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                                            <div class="panel panel-default">
 
-                                            <div class="panel-heading" role="tab" id="headingOne">
-                                                <h4 class="panel-title">
-                                                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                        <i class="more-less glyphicon glyphicon-plus"></i>
-                                                        Tamaño
-                                                    </a>
-                                                </h4>
-                                            </div>
+                                                <div class="panel-heading" role="tab" id="headingOne">
+                                                    <h4 class="panel-title">
+                                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                            <i class="more-less glyphicon glyphicon-plus"></i>
+                                                            Tamaño
+                                                        </a>
+                                                    </h4>
+                                                </div>
 
-                                            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                                                <div class="panel-body">
-                                                    <div class="tamano-pizza">
-                                                        <label><input type="radio" value="none" name="visited" /> Grande</label><br />
-                                                        <label><input type="radio" value="none" name="visited" /> Mediana</label><br />
-                                                        <label><input type="radio" value="none" name="visited" /> Pequeña</label><br />
+                                                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                                                    <div class="panel-body">
+                                                        <div class="tamano-pizza">
+                                                            <label><input type="radio" value="none" name="visited" /> Grande</label><br />
+                                                            <label><input type="radio" value="none" name="visited" /> Mediana</label><br />
+                                                            <label><input type="radio" value="none" name="visited" /> Pequeña</label><br />
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="panel panel-default">
-                                            <div class="panel-heading" role="tab" id="headingTwo">
-                                                <h4 class="panel-title">
-                                                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                        <i class="more-less glyphicon glyphicon-plus"></i>
-                                                        Coberturas
-                                                    </a>
-                                                </h4>
-                                            </div>
-                                            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                                <div class="panel-body">
-                                                    <input type="checkbox" id="jamon" name="jamon" value="500">
-                                                    <label for="jamon"> Jamón CRC500.00</label><br>
-                                                    <input type="checkbox" id="hongos" name="hongos" value="500">
-                                                    <label for="hongos"> Hongos CRC500.00</label><br>
-                                                    <input type="checkbox" id="queso-extra" name="queso-extra" value="1000">
-                                                    <label for="queso-extra"> Queso extra CRC1000.00</label><br><br>
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading" role="tab" id="headingTwo">
+                                                    <h4 class="panel-title">
+                                                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                            <i class="more-less glyphicon glyphicon-plus"></i>
+                                                            Coberturas
+                                                        </a>
+                                                    </h4>
+                                                </div>
+                                                <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+                                                    <div class="panel-body">
+                                                        <input type="checkbox" id="jamon" name="jamon" value="500">
+                                                        <label for="jamon"> Jamón CRC500.00</label><br>
+                                                        <input type="checkbox" id="hongos" name="hongos" value="500">
+                                                        <label for="hongos"> Hongos CRC500.00</label><br>
+                                                        <input type="checkbox" id="queso-extra" name="queso-extra" value="1000">
+                                                        <label for="queso-extra"> Queso extra CRC1000.00</label><br><br>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div><!-- panel-group -->
-                                </div><!-- container -->
+                                        </div><!-- panel-group -->
+                                    </div><!-- container -->
 
-                                <div class="row">
-                                    <button asp-page-handler="Orden">Proceder al chequeo</button>
+                                    <div class="row">
+                                        <button asp-page-handler="Orden">Proceder al chequeo</button>
+                                    </div>
+
+                                </div>
+                                <div class="tab-pane" id="tab_default_2">
+                                    <p>
+                                        Recibo
+                                    </p>
                                 </div>
 
-                            </div>
-                            <div class="tab-pane" id="tab_default_2">
-                                <p>
-                                    Recibo
-                                </p>
-                            </div>
-
-                            <div class="tab-pane" id="tab_default_3">
-                                Dirección
+                                <div class="tab-pane" id="tab_default_3">
+                                    Dirección
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
 
-    
 
-    <script src="~/js/collapse.js"></script>
+    @section Scripts{
+        <script src="~/js/collapse.js"></script>
+    }
+
+
+
+
 
 </body>
 </html>
