--- a/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
@@ -17,17 +17,14 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="#">Navishi's Pizza.</a>
-            </div>
-        </div>
-    </nav>
-    <!-- some content to allow scrolling :)-->
-    <div class="hero">
-        <div class="overlay"></div>
+    <div class="wrapper">
+        <header>
+            <nav>
+                <div class="logo">
+                    <a href="../Index" style="text-decoration-style:none">Navishi's Pizza</a>
+                </div>
+            </nav>
+        </header>
     </div>
 
     <partial name="_CookieConsentPartial" />
@@ -35,9 +32,6 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2020 - Pizzeria</p>
-        </footer>
     </div>
 
     <environment include="Development">
