--- a/Pizzeria/Pizzeria/wwwroot/css/site.css
+++ b/Pizzeria/Pizzeria/wwwroot/css/site.css
@@ -1,106 +1,120 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700,900");
-
-body {
-    font-family: 'Lato', Arial, sans-serif;
-    color: #fff;
-    font-size: 17px;
-    line-height: 1.6;
-}
-
-.hero {
-    position: relative;
-    height: 60vh;
-    z-index: -2;
-    background: url("https://i.imgur.com/KHX4RUT.jpg") center top no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-
-.overlay {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(0,0,0,0.6);
-}
-
-.main-content {
-    background: #fff;
-}
-
-section {
-    background: #fff;
-    padding: 4rem 0 7rem;
-}
-
-    section:nth-child(even) {
-        background: #fff;
-    }
-
-h2,
-h3 {
-    padding: 2rem 0 0.75rem;
-    font-weight: 700;
-    color: #fff;
-}
-/* ===================================== */
-/* ===== THE INTERESTING STUFF NOW ===== */
-/* ===================================== */
-.navbar {
-    border: none;
-    transition: 0.4s;
-    /* --- navbar sizes --- */
-    /* --- navbar colors --- */
-}
-
-.navbar-brand {
-    font-size: 2.25rem;
-    font-weight: 900;
-    color: #fff;
-}
-
-.navbar--size--xl {
-    padding: 4rem 0;
-}
-
-.navbar--size--lg {
-    padding: 2rem 0;
-}
-
-.navbar--size--md {
-    padding: 1rem 0;
-}
-
-.navbar--size--sm {
-    padding: 0;
-}
-
-.navbar--color--white {
-    background: #fff;
-}
-
-.navbar--color--primary {
-    background: #fff;
-}
-
-.navbar--color--secondary {
-    background: rgba(0,0,0,0.2);
-}
-
-.navbar--color--ghost {
-    background: rgba(0,0,0,0.2);
-}
-
-    .navbar--color--ghost .navbar-brand,
-    .navbar--color--ghost .navbar-text,
-    .navbar--color--ghost a {
-        color: #fff;
-    }
-
-.collapse > .navbar-collapse > a{
+a:link, a:visited {
     color: white;
+    text-align: center;
     text-decoration: none;
+    display: inline-block;
+}
+
+html, body {
+    width: 100%;
+    background: url(https://i.imgur.com/KHX4RUT.jpg) no-repeat ;
+    background-size: cover;
+    background-attachment:fixed;
+    
+}
+
+header {
+    width: 100%;
+    height: 13vh;
+    background-color: wheat;
+    margin-bottom:3vmax;
+}
+
+.content {
+    width: 94%;
+    margin: 4em auto;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: justify;
+}
+
+.logo {
+    line-height: 60px;
+    position: fixed;
+    float: left;
+    margin: 16px 46px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+nav {
+    position: fixed;
+    width: 100%;
+    line-height: 60px;
+}
+
+    nav ul {
+        line-height: 60px;
+        list-style: none;
+        background: rgba(0, 0, 0, 0);
+        overflow: hidden;
+        color: #fff;
+        padding: 0;
+        text-align: right;
+        margin: 0;
+        padding-right: 40px;
+        transition: 1s;
+    }
+
+    nav.black ul {
+        background: #000;
+    }
+
+    nav ul li {
+        display: inline-block;
+        padding: 16px 40px;
+        ;
+    }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 16px;
+        }
+
+.menu-icon {
+    line-height: 60px;
+    width: 100%;
+    background: #000;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 24px;
+    cursor: pointer;
+    color: #fff;
+    display: none;
+}
+
+@media(max-width: 786px) {
+
+    .logo {
+        position: fixed;
+        top: 0;
+        margin-top: 16px;
+    }
+
+    nav ul {
+        max-height: 0px;
+        background: #000;
+    }
+
+    nav.black ul {
+        background: #000;
+    }
+
+    .showing {
+        max-height: 34em;
+    }
+
+    nav ul li {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 24px;
+        text-align: center;
+    }
+
+    .menu-icon {
+        display: block;
+    }
 }
