Historia 6 Se agregan los chequeos referentes a realizar la orden. También se realiza la lógica en el code behind para llamar los métodos anteriormente creados que establecen y retornan el total de la orden.

--- a/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
@@ -13,7 +13,7 @@
 
     <link href="~/css/collapse.css" rel="stylesheet">
 
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" />
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 
@@ -25,20 +25,25 @@
                         <div class="tabbable-line">
                             <ul class="nav nav-tabs ">
                                 <li class="active">
-                                    <a href="#tab_default_1" data-toggle="tab">
+                                    <a href="#tab_default_1" data-toggle="tab" id="tab1">
                                         Ordenar
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#tab_default_2" data-toggle="tab">
-                                        Recibo
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#tab_default_3" data-toggle="tab">
-                                        Dirección
-                                    </a>
-                                </li>
+                                @if (Model.MontoTotal != 0)
+                                {
+                                    <li>
+                                        <a href="#tab_default_2" data-toggle="tab">
+                                            Recibo
+                                        </a>
+                                    </li>
+
+
+                                    <li>
+                                        <a href="#tab_default_3" data-toggle="tab">
+                                            Dirección
+                                        </a>
+                                    </li>
+                                }
                             </ul>
 
                             <div class="tab-content">
@@ -59,9 +64,9 @@
                                                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                                                     <div class="panel-body">
                                                         <div class="tamano-pizza">
-                                                            <label><input type="radio" value="none" name="visited" /> Grande</label><br />
-                                                            <label><input type="radio" value="none" name="visited" /> Mediana</label><br />
-                                                            <label><input type="radio" value="none" name="visited" /> Pequeña</label><br />
+                                                            <label><input type="radio" value="grande" name="tamaño" required /> Grande CRC7000.00</label><br />
+                                                            <label><input type="radio" value="mediana" name="tamaño" /> Mediana CRC5000.00</label><br />
+                                                            <label><input type="radio" value="pequeña" name="tamaño" /> Pequeña CRC3000.00</label><br />
                                                         </div>
                                                     </div>
                                                 </div>
@@ -77,12 +82,41 @@
                                                 </div>
                                                 <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
                                                     <div class="panel-body">
-                                                        <input type="checkbox" id="jamon" name="jamon" value="500">
-                                                        <label for="jamon"> Jamón CRC500.00</label><br>
-                                                        <input type="checkbox" id="hongos" name="hongos" value="500">
-                                                        <label for="hongos"> Hongos CRC500.00</label><br>
-                                                        <input type="checkbox" id="queso-extra" name="queso-extra" value="1000">
-                                                        <label for="queso-extra"> Queso extra CRC1000.00</label><br><br>
+                                                        <input type="checkbox" id="salsa" name="cobertura" value="salsa" required>
+                                                        <label for="salsa"> Salsa </label>
+                                                        <label for="salsa" id="precio-salsa"> CRC500.00</label><br>
+
+                                                        <input type="checkbox" id="hongos" name="cobertura" value="hongos">
+                                                        <label for="hongos"> Hongos </label>
+                                                        <label for="hongos" id="precio-hongos"> CRC500.00</label><br>
+
+                                                        <input type="checkbox" id="cebolla" name="cobertura" value="cebolla">
+                                                        <label for="cebolla"> Cebolla </label>
+                                                        <label for="cebolla" id="precio-cebolla"> CRC500.00</label><br>
+
+                                                        <input type="checkbox" id="chile" name="cobertura" value="chile">
+                                                        <label for="chile"> Chile </label>
+                                                        <label for="chile" id="precio-chile"> CRC500.00</label><br>
+
+                                                        <input type="checkbox" id="queso" name="cobertura" value="queso">
+                                                        <label for="queso"> Queso </label>
+                                                        <label for="queso" id="precio-queso"> CRC1000.00</label><br>
+
+                                                        <input type="checkbox" id="jamon" name="cobertura" value="jamon">
+                                                        <label for="jamon"> Jamón </label>
+                                                        <label for="jamon" id="precio-jamon"> CRC1000.00</label><br>
+
+                                                        <input type="checkbox" id="pepperoni" name="cobertura" value="pepperoni">
+                                                        <label for="pepperoni"> Pepperoni </label>
+                                                        <label for="pepperoni" id="precio-pepperoni"> CRC1000.00</label><br>
+
+                                                        <input type="checkbox" id="piña" name="cobertura" value="piña">
+                                                        <label for="piña"> Piña </label>
+                                                        <label for="piña" id="precio-piña"> CRC1500.00</label><br>
+
+                                                        <input type="checkbox" id="salami" name="cobertura" value="salami">
+                                                        <label for="salami"> Salami </label>
+                                                        <label for="salami" id="precio-salami"> CRC1500.00</label><br>
                                                     </div>
                                                 </div>
                                             </div>
@@ -90,18 +124,34 @@
                                     </div><!-- container -->
 
                                     <div class="row">
-                                        <button asp-page-handler="Orden">Proceder al chequeo</button>
+                                        <button asp-page-handler="Orden" id="caja">Proceder al chequeo</button>
                                     </div>
 
                                 </div>
-                                <div class="tab-pane" id="tab_default_2">
-                                    <p>
-                                        Recibo
-                                    </p>
-                                </div>
 
-                                <div class="tab-pane" id="tab_default_3">
-                                    Dirección
+
+                                <div class="tab-pane active" id="tab_default_2">
+                                    @if (Model.MontoTotal != 0)
+                                    {
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <strong><p>Recibo:</p></strong>
+                                                @foreach (var dato in Model.Pizza)
+                                                {
+                                                    <p>@dato.Tipo  CRC @dato.Precio.00</p>
+                                                }
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <strong><p>Total: CRC @Model.MontoTotal.00</p></strong>
+                                                <textarea cols="30" rows="4" placeholder="Dirección exacta"></textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <button asp-page-handler="Orden" id="caja">Confirmar</button>
+                                            <button asp-page-handler="Cancelar" id="caja">Cancelar</button>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                         </div>
@@ -118,7 +168,7 @@
 
 
 
-
+        
 </body>
 </html>
 
