--- a/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
@@ -11,164 +11,82 @@
     <script src="https://kit.fontawesome.com/8dbd1c7c50.js" crossorigin="anonymous"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
-    <link href="~/css/collapse.css" rel="stylesheet">
+    <link href="~/css/orden.css" rel="stylesheet">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" />
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <form method="post">
-            <div class="container center textbox">
-                <div class="col-lg-12">
-                    <div data-spy="scroll" class="tabbable-panel">
-                        <div class="tabbable-line">
-                            <ul class="nav nav-tabs ">
-                                <li class="active">
-                                    <a href="#tab_default_1" data-toggle="tab" id="tab1">
-                                        Ordenar
-                                    </a>
-                                </li>
-                                @if (Model.MontoTotal != 0)
-                                {
-                                    <li>
-                                        <a href="#tab_default_2" data-toggle="tab">
-                                            Recibo
-                                        </a>
-                                    </li>
+    <form id="regForm" method="post">
+        <h1>Escoja su preferido:</h1>
+        <!-- One "tab" for each step in the form: -->
+        <div class="tab">
+            <h4>Tamaño:</h4>
+            <label><input type="radio" value="grande" name="tamaño" required /> Grande CRC7000.00</label><br />
+            <label><input type="radio" value="mediana" name="tamaño" required /> Mediana CRC5000.00</label><br />
+            <label><input type="radio" value="pequeña" name="tamaño" required /> Pequeña CRC3000.00</label><br />
+        </div>
+        <div class="tab">
+            <h4>Coberturas:</h4>
+            <input type="checkbox" id="salsa" name="cobertura" value="salsa" required>
+            <label for="salsa"> Salsa </label>
+            <label for="salsa" id="precio-salsa"> CRC500.00</label><br>
 
+            <input type="checkbox" id="hongos" name="cobertura" value="hongos">
+            <label for="hongos"> Hongos </label>
+            <label for="hongos" id="precio-hongos"> CRC500.00</label><br>
 
-                                    <li>
-                                        <a href="#tab_default_3" data-toggle="tab">
-                                            Dirección
-                                        </a>
-                                    </li>
-                                }
-                            </ul>
+            <input type="checkbox" id="cebolla" name="cobertura" value="cebolla">
+            <label for="cebolla"> Cebolla </label>
+            <label for="cebolla" id="precio-cebolla"> CRC500.00</label><br>
 
-                            <div class="tab-content">
-                                <div class="tab-pane active" id="tab_default_1">
-                                    <div class="ingredientes">
-                                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                                            <div class="panel panel-default">
+            <input type="checkbox" id="chile" name="cobertura" value="chile">
+            <label for="chile"> Chile </label>
+            <label for="chile" id="precio-chile"> CRC500.00</label><br>
 
-                                                <div class="panel-heading" role="tab" id="headingOne">
-                                                    <h4 class="panel-title">
-                                                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                            <i class="more-less glyphicon glyphicon-plus"></i>
-                                                            Tamaño
-                                                        </a>
-                                                    </h4>
-                                                </div>
+            <input type="checkbox" id="queso" name="cobertura" value="queso">
+            <label for="queso"> Queso </label>
+            <label for="queso" id="precio-queso"> CRC1000.00</label><br>
 
-                                                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                                                    <div class="panel-body">
-                                                        <div class="tamano-pizza">
-                                                            <label><input type="radio" value="grande" name="tamaño" required /> Grande CRC7000.00</label><br />
-                                                            <label><input type="radio" value="mediana" name="tamaño" /> Mediana CRC5000.00</label><br />
-                                                            <label><input type="radio" value="pequeña" name="tamaño" /> Pequeña CRC3000.00</label><br />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="panel panel-default">
-                                                <div class="panel-heading" role="tab" id="headingTwo">
-                                                    <h4 class="panel-title">
-                                                        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                            <i class="more-less glyphicon glyphicon-plus"></i>
-                                                            Coberturas
-                                                        </a>
-                                                    </h4>
-                                                </div>
-                                                <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
-                                                    <div class="panel-body">
-                                                        <input type="checkbox" id="salsa" name="cobertura" value="salsa" required>
-                                                        <label for="salsa"> Salsa </label>
-                                                        <label for="salsa" id="precio-salsa"> CRC500.00</label><br>
+            <input type="checkbox" id="jamon" name="cobertura" value="jamon">
+            <label for="jamon"> Jamón </label>
+            <label for="jamon" id="precio-jamon"> CRC1000.00</label><br>
 
-                                                        <input type="checkbox" id="hongos" name="cobertura" value="hongos">
-                                                        <label for="hongos"> Hongos </label>
-                                                        <label for="hongos" id="precio-hongos"> CRC500.00</label><br>
+            <input type="checkbox" id="pepperoni" name="cobertura" value="pepperoni">
+            <label for="pepperoni"> Pepperoni </label>
+            <label for="pepperoni" id="precio-pepperoni"> CRC1000.00</label><br>
 
-                                                        <input type="checkbox" id="cebolla" name="cobertura" value="cebolla">
-                                                        <label for="cebolla"> Cebolla </label>
-                                                        <label for="cebolla" id="precio-cebolla"> CRC500.00</label><br>
+            <input type="checkbox" id="piña" name="cobertura" value="piña">
+            <label for="piña"> Piña </label>
+            <label for="piña" id="precio-piña"> CRC1500.00</label><br>
 
-                                                        <input type="checkbox" id="chile" name="cobertura" value="chile">
-                                                        <label for="chile"> Chile </label>
-                                                        <label for="chile" id="precio-chile"> CRC500.00</label><br>
+            <input type="checkbox" id="salami" name="cobertura" value="salami">
+            <label for="salami"> Salami </label>
+            <label for="salami" id="precio-salami"> CRC1500.00</label><br>
+        </div>
 
-                                                        <input type="checkbox" id="queso" name="cobertura" value="queso">
-                                                        <label for="queso"> Queso </label>
-                                                        <label for="queso" id="precio-queso"> CRC1000.00</label><br>
-
-                                                        <input type="checkbox" id="jamon" name="cobertura" value="jamon">
-                                                        <label for="jamon"> Jamón </label>
-                                                        <label for="jamon" id="precio-jamon"> CRC1000.00</label><br>
-
-                                                        <input type="checkbox" id="pepperoni" name="cobertura" value="pepperoni">
-                                                        <label for="pepperoni"> Pepperoni </label>
-                                                        <label for="pepperoni" id="precio-pepperoni"> CRC1000.00</label><br>
-
-                                                        <input type="checkbox" id="piña" name="cobertura" value="piña">
-                                                        <label for="piña"> Piña </label>
-                                                        <label for="piña" id="precio-piña"> CRC1500.00</label><br>
-
-                                                        <input type="checkbox" id="salami" name="cobertura" value="salami">
-                                                        <label for="salami"> Salami </label>
-                                                        <label for="salami" id="precio-salami"> CRC1500.00</label><br>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div><!-- panel-group -->
-                                    </div><!-- container -->
-
-                                    <div class="row">
-                                        <button asp-page-handler="Orden" id="caja">Proceder al chequeo</button>
-                                    </div>
-
-                                </div>
-
-
-                                <div class="tab-pane active" id="tab_default_2">
-                                    @if (Model.MontoTotal != 0)
-                                    {
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <strong><p>Recibo:</p></strong>
-                                                @foreach (var dato in Model.Pizza)
-                                                {
-                                                    <p>@dato.Tipo  CRC @dato.Precio.00</p>
-                                                }
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <strong><p>Total: CRC @Model.MontoTotal.00</p></strong>
-                                                <textarea cols="30" rows="4" placeholder="Dirección exacta"></textarea>
-                                            </div>
-                                        </div>
-
-                                        <div class="row">
-                                            <button asp-page-handler="Orden" id="caja">Confirmar</button>
-                                            <button asp-page-handler="Cancelar" id="caja">Cancelar</button>
-                                        </div>
-                                    }
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div style="overflow:auto;">
+            <div style="float:right;">
+                <button type="button" id="prevBtn" onclick="nextPrev(-1)">Anterior</button>
+                <button type="button" asp-page-handler="Ordenar" id="nextBtn" onclick="nextPrev(1)" disabled>Siguiente</button>
             </div>
-        </form>
-
+        </div>
+        <!-- Circles which indicates the steps of the form: -->
+        <div style="text-align:center;margin-top:40px;">
+            <span class="step"></span>
+            <span class="step"></span>
+        </div>
+    </form>
 
     @section Scripts{
-        <script src="~/js/collapse.js"></script>
+        <script src="~/js/orden.js"></script>
     }
 
 
 
 
-        
+
 </body>
 </html>
 
