--- a/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
     </environment>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper navbar-fixed-top">
         <header>
             <nav>
                 <div class="logo">
-                    <a href="../Index" style="text-decoration-style:none">Navishi's Pizza</a>
+                    <a href="../Index">Navishi's Pizza</a>
                 </div>
             </nav>
         </header>
