--- a/Pizzeria/Pizzeria/Pages/Index.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Index.cshtml
@@ -15,13 +15,16 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
     <style>
+        body {
+        margin-top:10vmax;
+        }
+
         form {
             width: 100%;
-            margin:auto;
+            margin: auto;
             padding: 20px;
             border-radius: 6px;
-            background-color: wheat;
-            
+            background-color: #4CAF50;
         }
 
             form h1 {
@@ -35,8 +38,16 @@
 <body>
     <form method="post">
         <div class="container">
-            <h1>Bienvenido a Navishi's Pizza</h1>
-            <button class="btn btn-outline-primary">Ordenar</button>
+            <div class="row">
+                <div class="center col-lg-6">
+                    <h1>Bienvenido a Navishi's Pizza</h1>
+                    <button class="btn btn-outline-primary">Ordenar</button>
+                </div>
+                <div class="col-lg-6">
+                    <img src="~/images/me6.png" />
+                </div>
+            </div>
+            
         </div>
     </form>
 
