--- a/Pizzeria/Pizzeria/wwwroot/css/site.css
+++ b/Pizzeria/Pizzeria/wwwroot/css/site.css
@@ -3,21 +3,20 @@ a:link, a:visited {
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    position: fixed;
 }
 
 html, body {
     width: 100%;
-    background: url(https://i.imgur.com/KHX4RUT.jpg) no-repeat ;
+    background: url(https://i.imgur.com/KHX4RUT.jpg) no-repeat;
     background-size: cover;
-    background-attachment:fixed;
-    
+    background-attachment: fixed;
 }
 
 header {
     width: 100%;
-    height: 13vh;
-    background-color: wheat;
-    margin-bottom:3vmax;
+    min-height: 13vh;
+    background-color: #4CAF50;
 }
 
 .content {
@@ -29,6 +28,7 @@ header {
 }
 
 .logo {
+    position: fixed;
     line-height: 60px;
     position: fixed;
     float: left;
@@ -74,47 +74,11 @@ nav {
             font-size: 16px;
         }
 
-.menu-icon {
-    line-height: 60px;
-    width: 100%;
-    background: #000;
-    text-align: right;
-    box-sizing: border-box;
-    padding: 15px 24px;
-    cursor: pointer;
-    color: #fff;
-    display: none;
-}
-
 @media(max-width: 786px) {
 
     .logo {
         position: fixed;
         top: 0;
         margin-top: 16px;
-    }
-
-    nav ul {
-        max-height: 0px;
-        background: #000;
-    }
-
-    nav.black ul {
-        background: #000;
-    }
-
-    .showing {
-        max-height: 34em;
-    }
-
-    nav ul li {
-        box-sizing: border-box;
-        width: 100%;
-        padding: 24px;
-        text-align: center;
-    }
-
-    .menu-icon {
-        display: block;
     }
 }
