--- a/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
@@ -88,7 +88,8 @@
         </div>
 
         <div class="row">
-            <h5>Total actual: <label id="totalActual">0</label></h5>
+            <h5>Total actual: </h5>
+            <input type="text" id="total" name="total" value="" />
         </div>
     </form>
 
