Refactoring de Ordenar Se cambia el input donde se muestra el Total Actual por un label y se trabaja con un input escondido para efectos se mostrarlo más adelante. El atribudo "hidden" del input evita que se pueda retornar su valor desde el codebehind

--- a/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
+++ b/Pizzeria/Pizzeria/Pages/Ordenar/Ordenar.cshtml
@@ -88,8 +88,8 @@
         </div>
 
         <div class="row">
-            <h5>Total actual: </h5>
-            <input type="text" id="total" name="total" value="" />
+            <h5>Total actual: <label type="text" id="total" name="total" /></h5>
+            <input type="hidden" id="total2" name="total2"/>
         </div>
     </form>
 
